<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/tasks_fragment_dest">

    <fragment
        android:id="@+id/task_detail_fragment_dest"
        android:name="com.example.android.architecture.blueprints.weatherapp.taskdetail.TaskDetailFragment"
        android:label="Task Details">
        <action
            android:id="@+id/action_taskDetailFragment_to_addEditTaskFragment"
            app:destination="@id/add_edit_task_fragment_dest" />
        <argument
            android:name="taskId"
            app:argType="string" />
        <action
            android:id="@+id/action_taskDetailFragment_to_tasksFragment"
            app:destination="@id/tasks_fragment_dest" />
...
